--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "jquery": "^3.7.1",
     "mysql2": "^3.9.7",
     "node-notifier": "^10.0.1",
-    "sequelize": "^6.37.3",
-    "sweetalert2": "^11.6.13"
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
