--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fullcalendar/bootstrap5": "^6.1.11",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -18,6 +19,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "fullcalendar-scheduler": "^6.1.11",
     "jquery": "^3.7.1",
     "mysql2": "^3.9.7",
     "node-notifier": "^10.0.1",
